--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link 
-  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
   rel="stylesheet"  type='text/css'>
 </head>
 <body>
@@ -16,13 +16,13 @@
       <div class="col s12">
         <div class="card" id="main">
           <div class="card-content">
-            <span class="card-title">Task List</span>
+            <span class="card-title">My Tasks</span>
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
                   <input type="text" name="task" id="task">
                   <label for="task">New Task</label>
-                  <input type="submit" value="Add Task" class="btn">
+                  <input type="submit" value="Add New Task" class="btn">
                 </div>
               </form>
             </div>
@@ -33,9 +33,6 @@
               <input type="text" name="filter" id="filter">
               <label for="filter">Filter Tasks</label>
             </div>
-            <ul>
-              <li>Favorites</li>
-            </ul>
             <ul class="collection">
             </ul>
             <a href="#" class="clear-tasks btn black">Clear Tasks</a>
