--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link 
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
   rel="stylesheet"  type='text/css'>
+  <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
   <div class="container">
