--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
             </div>
           </div>
           <div class="card-action">
-            <h5 id="task-title">Tasks</h5>
+            <h5 id="task-title">To Do List</h5>
             <div class="input-field col s12">
               <input type="text" name="filter" id="filter">
               <label for="filter">Filter Tasks</label>
             </div>
-            <ul class="collection">
-            </ul>
-            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
+            <div class="section">
+              <ul class="collection collection-tasks"></ul>
+            </div>
+            <div class="section">
+              <h5 id="task-title">Completed Tasks</h5>
+              <ul class="collection collection-completed"></ul>
+          </div>
+            <a href="#" class="clear-tasks btn black">Clear All Tasks</a>
           </div>
         </div>
       </div>
